hphp/hack/test/typecheck/refinements/or.php.exp
ERROR: File "or.php", line 6, characters 16-17:
Invalid argument (Typing[4110])
  File "or.php", line 25, characters 21-23:
  Expected `int`
  File "or.php", line 4, characters 13-18:
  But got `string` from this `is` expression test
ERROR: File "or.php", line 7, characters 19-20:
Invalid argument (Typing[4110])
  File "or.php", line 26, characters 24-29:
  Expected `string`
  File "or.php", line 4, characters 29-31:
  But got `int` from this `is` expression test
ERROR: File "or.php", line 13, characters 19-20:
Invalid argument (Typing[4110])
  File "or.php", line 26, characters 24-29:
  Expected `string`
  File "or.php", line 12, characters 7-34:
  But got `mixed` because of this statement
ERROR: File "or.php", line 14, characters 19-20:
Invalid argument (Typing[4110])
  File "or.php", line 26, characters 24-29:
  Expected `string`
  File "or.php", line 11, characters 22-26:
  But got `mixed`
